@@ -1,3 +1,6 @@
+2009-11-24
+	* Added support for max_text_width
+
 2009-11-20
 	* Allow for mpd connections to use IPv6
 
